Add package name to the definition of maven-assembly-plugin mainClass.

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>kikutaro.heroku.sendgrid.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
